@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.49';
+our $VERSION='0.50';
 
 
 use 5.005;
